link_libraries(sly)
include_directories(${CMAKE_HOME_DIRECTORY}/sly/include)

add_executable(test1 test1.cpp)
add_executable(regex_lr regex_lr.cpp)
add_executable(test2 test2.cpp)
add_executable(lex_lr lex_lr.cpp)
add_executable(test3 test3.cpp)
add_executable(test4 test4.cpp)
add_executable(test5 test5.cpp)
add_executable(out out.cpp)
add_executable(test6 test6.cpp)
add_executable(test7 test7.cpp)
# target_compile_options(out PRIVATE -ccc-print-phases)
